Fix AB#282: Luminosity contrast ratio of the sorting key is less than 3:1 (#2349)

--- a/src/@batch-flask/ui/table/table.scss
+++ b/src/@batch-flask/ui/table/table.scss
@@ -174,7 +174,6 @@ bl-table {
 
             .sort-icon {
                 margin-left: 3px;
-                color: $main-background;
             }
 
             &:hover:not(.sorting) > .sort-icon {
